--- a/rosenbrock.cfg
+++ b/rosenbrock.cfg
@@ -27,8 +27,8 @@ cross = 0.9
 # Maximum generation.
 max_gen = 50
 # Cross-over strategy. Little effect on optimization.
-#~ strategy = rand
-strategy = best
+strategy = rand
+#~ strategy = best
 # Initial parameter sets to try.
 #~ init0 = [0.95 0.95]
 #~ init1 = [0.94 0.95]
