--- a/rosenbrock.cfg
+++ b/rosenbrock.cfg
@@ -26,6 +26,9 @@ pop_size = 20
 cross = 0.9
 # Maximum generation.
 max_gen = 50
+# Stop when geometric mean of the population variance of individual parameters goes
+# below this value. If omitted, it is set to 0.
+min_var = 1e-5
 # Cross-over strategy. Little effect on optimization.
 strategy = rand
 #~ strategy = best
