Quote the arguments so that negatives aren't treated as options

--- a/rosenbrock.cfg
+++ b/rosenbrock.cfg
@@ -2,7 +2,7 @@
 # Command to invoke. The parameters are substituted into this string in
 # the bracketed locations, i.e. {0} will get substituted with the first parameter
 # and so on.
-command = ./rosenbrock.py --x {0} --y {1}
+command = ./rosenbrock.py --x "{0}" --y "{1}"
 # Max number of commands to invoke simultaneously
 max_launches = 3
 # Regular expression to parse the output of the command. The grouped pattern will
