Add a continuous DE algorithm for the cluster

--- a/rosenbrock.cfg
+++ b/rosenbrock.cfg
@@ -2,7 +2,7 @@
 # Command to invoke. The parameters are substituted into this string in
 # the bracketed locations, i.e. {0} will get substituted with the first parameter
 # and so on.
-command = ./rosenbrock.py --x "{0}" --y "{1}"
+command = ./rosenbrock.py --x "{0}" --y "{1}" --wait 0.1
 # Max number of commands to invoke simultaneously
 max_launches = 3
 # Regular expression to parse the output of the command. The grouped pattern will
@@ -14,8 +14,9 @@ num_args = 2
 # Argument limits in the format [low high]. If omitted, [0, 1] will be used.
 limit0 = [-5 5]
 limit1 = [-5 5]
-# Algorithm to use. Only 'de' (Differential evolution) is supported at the moment.
+# Algorithm to use. Either 'de' (Differential evolution) or 'cont_de' (Continuous DE)
 algorithm = de
+#~ algorithm = cont_de
 
 [de]
 # Population size: ~10x number of parameters, 40+ experiences diminishing returns.
@@ -36,3 +37,16 @@ strategy = rand
 #~ init0 = [0.95 0.95]
 #~ init1 = [0.94 0.95]
 #~ init2 = [0.95 0.97]
+
+[cont_de]
+# Population size: ~10x number of parameters, 40+ experiences diminishing returns.
+pop_size = 20
+# Weighting factor. Omitting it (i.e. using a random one each generation) is recommended.
+# factor = 0.8
+# Cross-over probability. High for parameter correlations, low for coordinate ascent.
+cross = 0.9
+# Maximum number of trials to do
+max_trials = 1000
+min_var = 1e-6
+# How long to sleep while polling for trial completion
+sleep_dur = 0.01
