Centralize the array parsing. Allow Python-style array literals.

--- a/rosenbrock.cfg
+++ b/rosenbrock.cfg
@@ -11,9 +11,9 @@ max_launches = 3
 result_re = Result: (.*)
 # Number of arguments
 num_args = 2
-# Argument limits in the format [low high]. If omitted, [0, 1] will be used.
-limit0 = [-5 5]
-limit1 = [-5 5]
+# Argument limits in the format [low, high]. If omitted, [0, 1] will be used.
+limit0 = [-5, 5]
+limit1 = [-5, 5]
 # Algorithm to use. Either 'de' (Differential evolution) or 'cont_de' (Continuous DE)
 algorithm = de
 #~ algorithm = cont_de
@@ -34,9 +34,9 @@ min_var = 1e-6
 strategy = rand
 #~ strategy = best
 # Initial parameter sets to try.
-#~ init0 = [0.95 0.95]
-#~ init1 = [0.94 0.95]
-#~ init2 = [0.95 0.97]
+#~ init0 = [0.95, 0.95]
+#~ init1 = [0.94, 0.95]
+#~ init2 = [0.95, 0.97]
 
 [cont_de]
 # Population size: ~10x number of parameters, 40+ experiences diminishing returns.
